--- a/CONTACTO/index.html
+++ b/CONTACTO/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style header.css">
     <link rel="stylesheet" href="style contacto.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
     
@@ -22,10 +23,9 @@
 
             <nav id="main-nav" class="main-nav" role="navigation">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Acerca</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="/QUIENES SOMOS/">Quienes somos</a></li>
+                    <li><a href="/CONTACTO/">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -59,7 +59,12 @@
             </div>
         </section>
     </main>
-
+ <footer class="site-footer">
+        <div class="container">
+            <p>&copy; 2025 Derechos reservados de Soluinc SAS. Todos los derechos reservados.</p>
+        </div>
+    </footer>
     <script src="formulario.js"></script>
+    <script src="header.js"></script>
 </body>
 </html>
