--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
             <nav id="main-nav" class="main-nav" role="navigation">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Acerca</a></li>
+                    <li><a href="/QUIENES SOMOS/">Quienes somos</a></li>
                     <li><a href="/CONTACTO/">Contacto</a></li>
                 </ul>
             </nav>
@@ -66,7 +66,7 @@
 
             <div class="services-grid">
                 <article class="service-card" tabindex="0">
-                    <img src="service1.jpg" alt="Laboratorio de Emprendimiento" class="service-thumb">
+                    <img src="" alt="Laboratorio de Emprendimiento" class="service-thumb">
                     <div class="service-card-inner">
                         <div class="service-header">
                             <div class="service-icon" aria-hidden="true"><i class="fa-solid fa-lightbulb"></i></div>
