--- a/QUIENES SOMOS/index.html
+++ b/QUIENES SOMOS/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quienes somos</title>
-    <link rel="stylesheet" href="style header.css">
+    <link rel="stylesheet" href="../style header.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="quienes somos.css">
+    <link rel="stylesheet" href="../footer.css">
     <link rel="stylesheet" href="proposito.css">
-    <link rel="stylesheet" href="footer.css">
+
 </head>
 <body>
      <header class="site-header">
         <div class="container">
-            <a href="ge" class="logo" aria-label="KONVERGE home">
-                <img src="Gemini_Generated_Image_pfp27ppfp27ppfp2.png" alt="Logo Konverge" class="logo-img">
+            <a href="../index.html" class="logo" aria-label="KONVERGE home">
+                <img src="logo konverge png-01.png" alt="Logo Konverge" class="logo-img">
             </a>
 
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Abrir menú">
@@ -22,42 +24,67 @@
 
             <nav id="main-nav" class="main-nav" role="navigation">
                 <ul>
-                      <li><a href="index.html">Inicio</a></li>
-                    <li><a href="/QUIENES SOMOS/">Quienes somos</a></li>
-                    <li><a href="/CONTACTO/">Contacto</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../index.html#servicios">Servicios</a></li>
+                    <li><a href="index.html" class="active">Quienes somos</a></li>
+                    <li><a href="../CONTACTO/">Contacto</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <section class="quienes-somos">
+        <div class="qs-background-shapes">
+            <div class="qs-shape qs-shape-1"></div>
+            <div class="qs-shape qs-shape-2"></div>
+        </div>
+        <div class="container qs-container">
+            <div class="qs-content">
+                <h2 class="qs-title">Quiénes <span class="qs-highlight">Somos</span></h2>
+                <p class="qs-description">En <strong>KONVERGE</strong>, creemos en el poder de la colaboración para transformar realidades. Acompañamos a las organizaciones en la evolución de su talento, sus estrategias y sus resultados, convirtiendo el conocimiento en acción y el aprendizaje en impacto sostenible.</p>
+            </div>
+            <div class="qs-visual">
+                <div class="qs-logo-wrapper">
+                    <div class="qs-glow"></div>
+                    <img src="logo konverge png-01.png" alt="Logo Konverge" class="qs-main-logo">
+                </div>
+            </div>
+        </div>
+        
         <div class="container">
-            <h2>Quiénes Somos</h2>
-            <p>En KONVERGE, creemos en el poder de la colaboración para transformar realidades. Acompañamos a las organizaciones en la evolución de su talento, sus estrategias y sus resultados, convirtiendo el conocimiento en acción y el aprendizaje en impacto sostenible.</p>
-            <div class="features">
-                <div class="feature">
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon"><i class="fa-solid fa-lightbulb"></i></div>
                     <h3>Innovación</h3>
                     <p>Utilizamos las últimas tecnologías para crear soluciones únicas.</p>
                 </div>
-                <div class="feature">
+                <div class="feature-card">
+                    <div class="feature-icon"><i class="fa-solid fa-handshake"></i></div>
                     <h3>Compromiso</h3>
                     <p>Nos comprometemos con la calidad y la satisfacción del cliente.</p>
                 </div>
-                <div class="feature">
+                <div class="feature-card">
+                    <div class="feature-icon"><i class="fa-solid fa-medal"></i></div>
                     <h3>Experiencia</h3>
                     <p>Contamos con años de experiencia en el sector.</p>
                 </div>
             </div>
-        </div>
     </section>
 
     <section class="proposito">
-        <div class="container">
-            <h2>Nuestro Propósito</h2>
-            <p>Nuestro propósito en KONVERGE es Del conocimiento al impacto.
-Unimos estrategia, innovación y formación para construir alianzas que transforman y generan valor real en las organizaciones.
-</p>
-            <img src="Gemini_Generated_Image_z4g285z4g285z4g2.png" alt="Imagen representativa del propósito" class="proposito-img">
+        <div class="prop-bg-shapes">
+            <div class="prop-shape prop-shape-1"></div>
+        </div>
+        <div class="container prop-container">
+            <div class="prop-content">
+                <h2 class="prop-title">Nuestro <span class="prop-highlight">Propósito</span></h2>
+                <p class="prop-text">Nuestro propósito en KONVERGE es <strong>Del conocimiento al impacto</strong>.<br>Unimos estrategia, innovación y formación para construir alianzas que transforman y generan valor real en las organizaciones.</p>
+            </div>
+            <div class="prop-visual">
+                <div class="prop-img-wrapper">
+                    <img src="Gemini_Generated_Image_z4g285z4g285z4g2.png" alt="Imagen representativa del propósito" class="prop-img">
+                </div>
+            </div>
         </div>
     </section>
 
@@ -66,6 +93,6 @@ Unimos estrategia, innovación y formación para construir alianzas que transfor
             <p>&copy; 2025 Derechos reservados de Soluinc SAS. Todos los derechos reservados.</p>
         </div>
     </footer>
-    <script src="header.js"></script>
+    <script src="../header.js"></script>
 </body>
 </html>
