--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="site-header">
         <div class="container">
             <a href="ge" class="logo" aria-label="KONVERGE home">
-                <img src="Gemini_Generated_Image_pfp27ppfp27ppfp2.png" alt="Logo Konverge" class="logo-img">
+                <img src="logo konverge png-01.png" alt="Logo Konverge" class="logo-img">
             </a>
 
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Abrir menú">
@@ -39,10 +39,34 @@
 
 
     <section class="banner" style="--banner-image:url('https://images.unsplash.com/photo-1521791136064-7986c2920216?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8c2VydmljaW9zfGVufDB8fDB8fHww');">
+        <div class="banner-shapes" aria-hidden="true">
+            <div class="shape shape-1"></div>
+            <div class="shape shape-2"></div>
+            <div class="shape shape-3"></div>
+            <div class="shape shape-4"></div>
+            <div class="shape shape-5"></div>
+            <div class="shape shape-6"></div>
+            <div class="shape shape-7"></div>
+            <div class="shape shape-8"></div>
+            <div class="shape shape-9"></div>
+            <div class="shape shape-10"></div>
+            <div class="shape shape-11"></div>
+            <div class="shape shape-12"></div>
+            <div class="shape shape-13"></div>
+            <div class="shape shape-14"></div>
+            <div class="shape shape-15"></div>
+            <div class="shape shape-16"></div>
+            <div class="shape shape-17"></div>
+            <div class="shape shape-18"></div>
+            <div class="shape shape-19"></div>
+            <div class="shape shape-20"></div>
+        </div>
         <div class="banner-content">
             <div class="banner-logo" aria-hidden="false" role="img" aria-label="Logo de Konverge">
-                <img src="Gemini_Generated_Image_z4g285z4g285z4g2.png" alt="Logo Konverge" class="banner-logo-img">
+                <img src="logo konverge png-01.png" alt="Logo Konverge" class="banner-logo-img">
             </div>
+            <h1 class="banner-title">Donde la Estrategia<br>Converge con la<br>Innovación</h1>
+ <a href="/CONTACTO/" class="banner-button">Contáctanos</a>
         </div>
     </section>
 
@@ -64,83 +88,105 @@
         <div class="container">
             <h2 id="servicios-title" class="services-title">NUESTROS SERVICIOS</h2>
 
-            <div class="services-grid">
-                <article class="service-card" tabindex="0">
-                    <img src="" alt="Laboratorio de Emprendimiento" class="service-thumb">
-                    <div class="service-card-inner">
-                        <div class="service-header">
-                            <div class="service-icon" aria-hidden="true"><i class="fa-solid fa-lightbulb"></i></div>
-                            <h3 class="service-card-title"> Laboratorio de Emprendimiento, Innovación e Intraemprendimiento Organizacional</h3>
-                        </div>
-                        <p class="service-card-desc">Impulsamos ecosistemas donde la innovación florece desde adentro. Creamos programas de intraemprendimiento que empoderan a los colaboradores para desarrollar proyectos de alto valor, fomentando una cultura creativa, sostenible y competitiva. Incluye talleres como 'Intraemprendedores en Acción' y el laboratorio 'HackLab Corporativo'.</p>
-                    </div>
-                </article>
+            <div class="services-layout">
+                <!-- Navegación Izquierda -->
+                <div class="services-nav" role="tablist">
+                    <button class="service-btn active" data-target="svc-1" role="tab" aria-selected="true">
+                        <i class="fa-solid fa-lightbulb"></i>
+                        <span>Laboratorio de Emprendimiento</span>
+                    </button>
+                    <button class="service-btn" data-target="svc-2" role="tab" aria-selected="false">
+                        <i class="fa-solid fa-chart-line"></i>
+                        <span>Estrategia y Marketing</span>
+                    </button>
+                    <button class="service-btn" data-target="svc-3" role="tab" aria-selected="false">
+                        <i class="fa-solid fa-globe"></i>
+                        <span>Marketing Internacional</span>
+                    </button>
+                    <button class="service-btn" data-target="svc-4" role="tab" aria-selected="false">
+                        <i class="fa-solid fa-truck"></i>
+                        <span>Logística y Comercio</span>
+                    </button>
+                    <button class="service-btn" data-target="svc-5" role="tab" aria-selected="false">
+                        <i class="fa-solid fa-rocket"></i>
+                        <span>Taller de Emprendimiento</span>
+                    </button>
+                    <button class="service-btn" data-target="svc-6" role="tab" aria-selected="false">
+                        <i class="fa-solid fa-users"></i>
+                        <span>Cultura Organizacional</span>
+                    </button>
+                    <button class="service-btn" data-target="svc-7" role="tab" aria-selected="false">
+                        <i class="fa-solid fa-plane"></i>
+                        <span>Aceleración Exportadora</span>
+                    </button>
+                </div>
 
-                <article class="service-card" tabindex="0">
-                    <img src="service2.jpg" alt="Centro de Estrategia y Marketing" class="service-thumb">
-                    <div class="service-card-inner">
-                        <div class="service-header">
-                            <div class="service-icon" aria-hidden="true"><i class="fa-solid fa-chart-line"></i></div>
-                            <h3 class="service-card-title"> Centro de Estrategia y Marketing de Alto Impacto</h3>
+                <!-- Visualización Derecha -->
+                <div class="services-display">
+                    <!-- Panel 1 -->
+                    <div id="svc-1" class="service-panel active" role="tabpanel">
+                        <img src="https://images.unsplash.com/photo-1531482615713-2afd69097998?q=80&w=2070&auto=format&fit=crop" alt="Laboratorio de Emprendimiento" class="service-bg">
+                        <div class="service-content">
+                            <div class="service-icon-large"><i class="fa-solid fa-lightbulb"></i></div>
+                            <h3 class="service-panel-title">Laboratorio de Emprendimiento, Innovación e Intraemprendimiento Organizacional</h3>
+                            <p class="service-panel-desc">Impulsamos ecosistemas donde la innovación florece desde adentro. Creamos programas de intraemprendimiento que empoderan a los colaboradores para desarrollar proyectos de alto valor, fomentando una cultura creativa, sostenible y competitiva.</p>
                         </div>
-                        <p class="service-card-desc">Diseñamos estrategias que potencian marcas y generan conexión auténtica. Fortalecemos la capacidad de los equipos para crear propuestas de valor diferenciadas y con propósito. Ofrecemos el taller 'Branding con Propósito y Creatividad' y el laboratorio 'Posicionamiento Estratégico 360°'.</p>
                     </div>
-                </article>
-
-                <article class="service-card" tabindex="0">
-                    <img src="service3.jpg" alt="Unidad de Marketing Internacional" class="service-thumb">
-                    <div class="service-card-inner">
-                        <div class="service-header">
-                            <div class="service-icon" aria-hidden="true"><i class="fa-solid fa-globe"></i></div>
-                            <h3 class="service-card-title"> Unidad de Marketing Internacional y Desarrollo de Mercados Globales</h3>
+                    <!-- Panel 2 -->
+                    <div id="svc-2" class="service-panel" role="tabpanel">
+                        <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?q=80&w=2070&auto=format&fit=crop" alt="Estrategia y Marketing" class="service-bg">
+                        <div class="service-content">
+                            <div class="service-icon-large"><i class="fa-solid fa-chart-line"></i></div>
+                            <h3 class="service-panel-title">Centro de Estrategia y Marketing de Alto Impacto</h3>
+                            <p class="service-panel-desc">Diseñamos estrategias que potencian marcas y generan conexión auténtica. Fortalecemos la capacidad de los equipos para crear propuestas de valor diferenciadas y con propósito.</p>
                         </div>
-                        <p class="service-card-desc">Acompañamos a las empresas en su expansión internacional con inteligencia de mercados, estrategias de entrada y visión multicultural. Promovemos alianzas globales basadas en cooperación y sostenibilidad. Incluye el taller 'Inteligencia Comercial Global' y el laboratorio 'Exporta con Impacto'.</p>
                     </div>
-                </article>
-
-                <article class="service-card" tabindex="0">
-                    <img src="service4.jpg" alt="Centro de Excelencia en Logística" class="service-thumb">
-                    <div class="service-card-inner">
-                        <div class="service-header">
-                            <div class="service-icon" aria-hidden="true"><i class="fa-solid fa-truck"></i></div>
-                            <h3 class="service-card-title"> Centro de Excelencia en Logística y Comercio Internacional</h3>
+                    <!-- Panel 3 -->
+                    <div id="svc-3" class="service-panel" role="tabpanel">
+                        <img src="https://plus.unsplash.com/premium_photo-1681487924146-c091598b7e8a?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Marketing Internacional" class="service-bg">
+                        <div class="service-content">
+                            <div class="service-icon-large"><i class="fa-solid fa-globe"></i></div>
+                            <h3 class="service-panel-title">Unidad de Marketing Internacional y Desarrollo de Mercados Globales</h3>
+                            <p class="service-panel-desc">Acompañamos a las empresas en su expansión internacional con inteligencia de mercados, estrategias de entrada y visión multicultural. Promovemos alianzas globales basadas en cooperación y sostenibilidad.</p>
                         </div>
-                        <p class="service-card-desc">Optimizamos las cadenas de valor con enfoque sostenible y eficiente. Diseñamos soluciones que integran productividad, innovación y responsabilidad ambiental. Ofrecemos el taller 'Logística Verde y Comercio Sustentable' y el laboratorio 'Gestión Ágil de Riesgos Internacionales'.</p>
                     </div>
-                </article>
-
-                <article class="service-card" tabindex="0">
-                    <img src="service5.jpg" alt="Taller de Emprendimiento" class="service-thumb">
-                    <div class="service-card-inner">
-                        <div class="service-header">
-                            <div class="service-icon" aria-hidden="true"><i class="fa-solid fa-rocket"></i></div>
-                            <h3 class="service-card-title"> Taller de Emprendimiento para la Internacionalización: "Conquista Global: Emprende Más Allá"</h3>
+                    <!-- Panel 4 -->
+                    <div id="svc-4" class="service-panel" role="tabpanel">
+                        <img src="https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?q=80&w=2070&auto=format&fit=crop" alt="Logística" class="service-bg">
+                        <div class="service-content">
+                            <div class="service-icon-large"><i class="fa-solid fa-truck"></i></div>
+                            <h3 class="service-panel-title">Centro de Excelencia en Logística y Comercio Internacional</h3>
+                            <p class="service-panel-desc">Optimizamos las cadenas de valor con enfoque sostenible y eficiente. Diseñamos soluciones que integran productividad, innovación y responsabilidad ambiental.</p>
                         </div>
-                        <p class="service-card-desc">Capacitamos a emprendedores y empresarios para identificar oportunidades en mercados internacionales. Diseñamos estrategias de entrada efectivas y superar los desafíos de la expansión global, impulsando el crecimiento sostenible y competitivo de sus negocios.</p>
                     </div>
-                </article>
-
-                <article class="service-card" tabindex="0">
-                    <img src="service6.jpg" alt="Escuela de Cultura Organizacional" class="service-thumb">
-                    <div class="service-card-inner">
-                        <div class="service-header">
-                            <div class="service-icon" aria-hidden="true"><i class="fa-solid fa-users"></i></div>
-                            <h3 class="service-card-title"> Escuela de Cultura Organizacional, Liderazgo y Trabajo en Equipo</h3>
+                    <!-- Panel 5 -->
+                    <div id="svc-5" class="service-panel" role="tabpanel">
+                        <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=2070&auto=format&fit=crop" alt="Taller Emprendimiento" class="service-bg">
+                        <div class="service-content">
+                            <div class="service-icon-large"><i class="fa-solid fa-rocket"></i></div>
+                            <h3 class="service-panel-title">Taller de Emprendimiento para la Internacionalización</h3>
+                            <p class="service-panel-desc">Capacitamos a emprendedores y empresarios para identificar oportunidades en mercados internacionales. Diseñamos estrategias de entrada efectivas y superar los desafíos de la expansión global.</p>
                         </div>
-                        <p class="service-card-desc">Formamos líderes conscientes y equipos de alto desempeño que impulsan el crecimiento y bienestar corporativo. Desarrollamos habilidades de comunicación, liderazgo colaborativo y cohesión organizacional. Incluye el taller 'Liderazgo Colaborativo y Comunicación de Alto Impacto' y el laboratorio 'Cultura y Sinergia para el Alto Desempeño'.</p>
                     </div>
-                </article>
-
-                <article class="service-card" tabindex="0">
-                    <img src="service7.jpg" alt="Plataforma de Aceleración Exportadora" class="service-thumb">
-                    <div class="service-card-inner">
-                        <div class="service-header">
-                            <div class="service-icon" aria-hidden="true"><i class="fa-solid fa-plane"></i></div>
-                            <h3 class="service-card-title"> Plataforma de Aceleración Exportadora – 'Exportar es Posible'</h3>
+                    <!-- Panel 6 -->
+                    <div id="svc-6" class="service-panel" role="tabpanel">
+                        <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?q=80&w=2070&auto=format&fit=crop" alt="Cultura Organizacional" class="service-bg">
+                        <div class="service-content">
+                            <div class="service-icon-large"><i class="fa-solid fa-users"></i></div>
+                            <h3 class="service-panel-title">Escuela de Cultura Organizacional, Liderazgo y Trabajo en Equipo</h3>
+                            <p class="service-panel-desc">Formamos líderes conscientes y equipos de alto desempeño que impulsan el crecimiento y bienestar corporativo. Desarrollamos habilidades de comunicación, liderazgo colaborativo y cohesión organizacional.</p>
                         </div>
-                        <p class="service-card-desc">Nuestro programa insignia acompaña a las empresas en su camino hacia la internacionalización. Transformamos el potencial exportador en resultados tangibles mediante diagnóstico competitivo, planeación estratégica y acompañamiento comercial. Ofrecemos el taller 'Camino a la Exportación Exitosa' y el laboratorio 'Estrategias Comerciales para Mercados Internacionales'.</p>
                     </div>
-                </article>
+                    <!-- Panel 7 -->
+                    <div id="svc-7" class="service-panel" role="tabpanel">
+                        <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&w=2070&auto=format&fit=crop" alt="Aceleración Exportadora" class="service-bg">
+                        <div class="service-content">
+                            <div class="service-icon-large"><i class="fa-solid fa-plane"></i></div>
+                            <h3 class="service-panel-title">Plataforma de Aceleración Exportadora – 'Exportar es Posible'</h3>
+                            <p class="service-panel-desc">Nuestro programa insignia acompaña a las empresas en su camino hacia la internacionalización. Transformamos el potencial exportador en resultados tangibles mediante diagnóstico competitivo y planeación estratégica.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -167,5 +213,6 @@
 
     <script src="header.js"></script>
     <script src="servicios.js"></script>
+    <script src="banner.js"></script>
 </body>
 </html>
