--- a/CONTACTO/index.html
+++ b/CONTACTO/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - KONVERGE</title>
-    <link rel="stylesheet" href="style header.css">
+    <link rel="stylesheet" href="../style header.css">
     <link rel="stylesheet" href="style contacto.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="../footer.css">
 </head>
 <body>
     
     <header class="site-header">
         <div class="container">
-            <a href="ge" class="logo" aria-label="KONVERGE home">
-                <img src="Gemini_Generated_Image_pfp27ppfp27ppfp2.png" alt="Logo Konverge" class="logo-img">
+            <a href="../index.html" class="logo" aria-label="KONVERGE home">
+                <img src="logo konverge png-01.png" alt="Logo Konverge" class="logo-img">
             </a>
 
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Abrir menú">
@@ -23,17 +23,25 @@
 
             <nav id="main-nav" class="main-nav" role="navigation">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="/QUIENES SOMOS/">Quienes somos</a></li>
-                    <li><a href="/CONTACTO/">Contacto</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../index.html#servicios">Servicios</a></li>
+                    <li><a href="../QUIENES SOMOS/index.html">Quienes somos</a></li>
+                    <li><a href="index.html" class="active">Contacto</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main class="contact-main">
+        <div class="contact-bg-shapes">
+            <div class="shape shape-1"></div>
+            <div class="shape shape-2"></div>
+        </div>
         <section class="contact-section">
             <div class="contact-container">
+                <div class="contact-logo-wrapper">
+                    <img src="logo konverge png-01.png" alt="Konverge Logo" class="contact-form-logo">
+                </div>
                 <h1 class="contact-title">Contáctanos</h1>
                 <form id="contact-form" class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
                     <input type="hidden" name="_next" value="https://tu-sitio.com/gracias" />
@@ -65,6 +73,6 @@
         </div>
     </footer>
     <script src="formulario.js"></script>
-    <script src="header.js"></script>
+    <script src="../header.js"></script>
 </body>
 </html>
