--- a/QUIENES SOMOS/index.html
+++ b/QUIENES SOMOS/index.html
@@ -41,7 +41,7 @@
         <div class="container qs-container">
             <div class="qs-content">
                 <h2 class="qs-title">Quiénes <span class="qs-highlight">Somos</span></h2>
-                <p class="qs-description">En <strong>KONVERGE</strong>, creemos en el poder de la colaboración para transformar realidades. Acompañamos a las organizaciones en la evolución de su talento, sus estrategias y sus resultados, convirtiendo el conocimiento en acción y el aprendizaje en impacto sostenible.</p>
+                <p class="qs-description"><strong>KONVERGE</strong> es un aliado estratégico en consultoría, formación e innovación empresarial, enfocado en acompañar a las organizaciones en la evolución de su talento y estrategias. Creemos en el poder de la colaboración para transformar realidades, convirtiendo el conocimiento en acción y el aprendizaje en impacto sostenible.</p>
             </div>
             <div class="qs-visual">
                 <div class="qs-logo-wrapper">
@@ -82,7 +82,7 @@
             </div>
             <div class="prop-visual">
                 <div class="prop-img-wrapper">
-                    <img src="Gemini_Generated_Image_z4g285z4g285z4g2.png" alt="Imagen representativa del propósito" class="prop-img">
+                    <img src="konverge 222263-01.jpg" alt="Imagen representativa del propósito" class="prop-img">
                 </div>
             </div>
         </div>
