--- a/CONTACTO/index.html
+++ b/CONTACTO/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style contacto.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../footer.css">
+    <style>
+        .contact-container p {
+            text-align: justify;
+        }
+    </style>
 </head>
 <body>
     
