--- a/CONTACTO/index.html
+++ b/CONTACTO/index.html
@@ -20,6 +20,10 @@
         <div class="container">
             <a href="../index.html" class="logo" aria-label="KONVERGE home">
                 <img src="logo konverge png-01.png" alt="Logo Konverge" class="logo-img">
+                <div class="logo-text">
+                    <span class="slogan-main">Consultoría 360°</span>
+                    <span class="slogan-sub">Tu éxito sin límites</span>
+                </div>
             </a>
 
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Abrir menú">
