--- a/QUIENES SOMOS/index.html
+++ b/QUIENES SOMOS/index.html
@@ -16,6 +16,10 @@
         <div class="container">
             <a href="../index.html" class="logo" aria-label="KONVERGE home">
                 <img src="logo konverge png-01.png" alt="Logo Konverge" class="logo-img">
+                <div class="logo-text">
+                    <span class="slogan-main">Consultoría 360°</span>
+                    <span class="slogan-sub">Tu éxito sin límites</span>
+                </div>
             </a>
 
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Abrir menú">
@@ -41,7 +45,7 @@
         <div class="container qs-container">
             <div class="qs-content">
                 <h2 class="qs-title">Quiénes <span class="qs-highlight">Somos</span></h2>
-                <p class="qs-description"><strong>KONVERGE</strong> es un aliado estratégico en consultoría, formación e innovación empresarial, enfocado en acompañar a las organizaciones en la evolución de su talento y estrategias. Creemos en el poder de la colaboración para transformar realidades, convirtiendo el conocimiento en acción y el aprendizaje en impacto sostenible.</p>
+                <p class="qs-description">Somos <strong>KONVERGE</strong> un aliado estratégico en consultoría, formación e innovación empresarial. Acompañamos a las organizaciones en la evolución de su talento y sus estrategias, convencidos de que la colaboración transforma realidades y convierte el conocimiento en acción con impacto sostenible.</p>
             </div>
             <div class="qs-visual">
                 <div class="qs-logo-wrapper">
