--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <nav id="main-nav" class="main-nav" role="navigation">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="index.html" class="active">Inicio</a></li>
                     <li><a href="#servicios">Servicios</a></li>
                     <li><a href="/QUIENES SOMOS/">Quienes somos</a></li>
                     <li><a href="/CONTACTO/">Contacto</a></li>
