--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link rel="stylesheet" href="style elegirnos.css">
         <link rel="stylesheet" href="style acompanamiento.css">
+        <link rel="stylesheet" href="equipo.css">
         <link rel="stylesheet" href="footer.css">
 </head>
 <body>
@@ -239,6 +240,49 @@
 
             <div class="elegirnos-footer">
                 <button class="elegirnos-btn">Saber más</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- NUESTRO EQUIPO -->
+    <section id="equipo" class="team-section" aria-labelledby="equipo-title">
+        <div class="team-container">
+            <h2 id="equipo-title" class="team-title">Nuestro Equipo</h2>
+            
+            <div class="team-grid">
+                <!-- Miembro 1 -->
+                <div class="team-card">
+                    <div class="member-image-box">
+                        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=1000&auto=format&fit=crop" alt="Carlos Mendoza" class="member-image">
+                    </div>
+                    <div class="member-info">
+                        <h3>Carlos Mendoza</h3>
+                        <span class="member-role">CEO & Fundador</span>
+                        <p class="member-desc">Visionario con más de 15 años de experiencia liderando transformaciones empresariales. Especialista en identificar oportunidades de crecimiento global y estrategias disruptivas.</p>
+                    </div>
+                </div>
+                <!-- Miembro 2 -->
+                <div class="team-card">
+                    <div class="member-image-box">
+                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?q=80&w=1000&auto=format&fit=crop" alt="Ana Lucía Torres" class="member-image">
+                    </div>
+                    <div class="member-info">
+                        <h3>Ana Lucía Torres</h3>
+                        <span class="member-role">Directora de Estrategia</span>
+                        <p class="member-desc">Experta en marketing internacional y desarrollo de marcas. Su enfoque analítico y creativo impulsa a las empresas a conectar auténticamente con nuevos mercados.</p>
+                    </div>
+                </div>
+                <!-- Miembro 3 -->
+                <div class="team-card">
+                    <div class="member-image-box">
+                        <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?q=80&w=1000&auto=format&fit=crop" alt="Javier Ruiz" class="member-image">
+                    </div>
+                    <div class="member-info">
+                        <h3>Javier Ruiz</h3>
+                        <span class="member-role">Consultor Senior</span>
+                        <p class="member-desc">Especialista en logística y optimización de procesos. Javier diseña cadenas de valor eficientes que maximizan la rentabilidad y sostenibilidad operativa.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
