--- a/QUIENES SOMOS/index.html
+++ b/QUIENES SOMOS/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="quienes somos.css">
     <link rel="stylesheet" href="../footer.css">
     <link rel="stylesheet" href="proposito.css">
+    <link rel="stylesheet" href="equipo.css">
 
 </head>
 <body>
@@ -87,6 +88,53 @@
             <div class="prop-visual">
                 <div class="prop-img-wrapper">
                     <img src="konverge 222263-01.jpg" alt="Imagen representativa del propósito" class="prop-img">
+                </div>
+            </div>
+        </div>
+    </section>
+
+   <section id="equipo" class="team-section" aria-labelledby="equipo-title">
+        <div class="custom-shape-divider-top-1689800000">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+            </svg>
+        </div>
+        <div class="team-container">
+            <h2 id="equipo-title" class="team-title">Nuestro Equipo</h2>
+            
+            <div class="team-grid">
+                <!-- Miembro 1 -->
+                <div class="team-card">
+                    <div class="member-image-box">
+                        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=1000&auto=format&fit=crop" alt="Carlos Mendoza" class="member-image">
+                    </div>
+                    <div class="member-info">
+                        <h3>Carlos Mendoza</h3>
+                        <span class="member-role">CEO & Fundador</span>
+                        <p class="member-desc">Visionario con más de 15 años de experiencia liderando transformaciones empresariales. Especialista en identificar oportunidades de crecimiento global y estrategias disruptivas.</p>
+                    </div>
+                </div>
+                <!-- Miembro 2 -->
+                <div class="team-card">
+                    <div class="member-image-box">
+                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?q=80&w=1000&auto=format&fit=crop" alt="Ana Lucía Torres" class="member-image">
+                    </div>
+                    <div class="member-info">
+                        <h3>Ana Lucía Torres</h3>
+                        <span class="member-role">Directora de Estrategia</span>
+                        <p class="member-desc">Experta en marketing internacional y desarrollo de marcas. Su enfoque analítico y creativo impulsa a las empresas a conectar auténticamente con nuevos mercados.</p>
+                    </div>
+                </div>
+                <!-- Miembro 3 -->
+                <div class="team-card">
+                    <div class="member-image-box">
+                        <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?q=80&w=1000&auto=format&fit=crop" alt="Javier Ruiz" class="member-image">
+                    </div>
+                    <div class="member-info">
+                        <h3>Javier Ruiz</h3>
+                        <span class="member-role">Consultor Senior</span>
+                        <p class="member-desc">Especialista en logística y optimización de procesos. Javier diseña cadenas de valor eficientes que maximizan la rentabilidad y sostenibilidad operativa.</p>
+                    </div>
                 </div>
             </div>
         </div>
