--- a/QUIENES SOMOS/index.html
+++ b/QUIENES SOMOS/index.html
@@ -106,23 +106,25 @@
                 <!-- Miembro 1 -->
                 <div class="team-card">
                     <div class="member-image-box">
-                        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=1000&auto=format&fit=crop" alt="Carlos Mendoza" class="member-image">
+                        <img src="WhatsApp Image 2026-01-14 at 3.32.13 PM.JPG" alt="Carlos Mendoza" class="member-image">
                     </div>
                     <div class="member-info">
-                        <h3>Carlos Mendoza</h3>
-                        <span class="member-role">CEO & Fundador</span>
-                        <p class="member-desc">Visionario con más de 15 años de experiencia liderando transformaciones empresariales. Especialista en identificar oportunidades de crecimiento global y estrategias disruptivas.</p>
+                        <h3>Carolina Barrios Mendoza</h3>
+                        <span class="member-role">Estratega en Expansión Internacional</span>
+                        <p class="member-desc">Experta en negocios internacionales y consultoría empresarial con más de 15 años de experiencia. Acompaña a empresas y startups en el diseño de estrategias y modelos de negocio escalables para crecer y consolidarse en mercados nacionales e internacionales, con un enfoque sostenible y medible.
+</p>
                     </div>
                 </div>
                 <!-- Miembro 2 -->
                 <div class="team-card">
                     <div class="member-image-box">
-                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?q=80&w=1000&auto=format&fit=crop" alt="Ana Lucía Torres" class="member-image">
+                        <img src="WhatsApp Image 2026-01-15 at 2.42.07 PM.JPG" alt="Ana Lucía Torres" class="member-image">
                     </div>
                     <div class="member-info">
                         <h3>Ana Lucía Torres</h3>
                         <span class="member-role">Directora de Estrategia</span>
-                        <p class="member-desc">Experta en marketing internacional y desarrollo de marcas. Su enfoque analítico y creativo impulsa a las empresas a conectar auténticamente con nuevos mercados.</p>
+                        <p class="member-desc">Consultor Internacional en Comercio Exterior con 26 años de experiencia acompañando procesos de internacionalización de empresas de bienes y servicios. Especialista en acceso a mercados, optimización de operaciones y fortalecimiento de capacidades exportadoras, con enfoque estratégico y orientado a resultados.
+
                     </div>
                 </div>
                 <!-- Miembro 3 -->
@@ -131,9 +133,9 @@
                         <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?q=80&w=1000&auto=format&fit=crop" alt="Javier Ruiz" class="member-image">
                     </div>
                     <div class="member-info">
-                        <h3>Javier Ruiz</h3>
+                        <h3>Claudia Cepeda </h3>
                         <span class="member-role">Consultor Senior</span>
-                        <p class="member-desc">Especialista en logística y optimización de procesos. Javier diseña cadenas de valor eficientes que maximizan la rentabilidad y sostenibilidad operativa.</p>
+                        <p class="member-desc">Magíster en Administración y profesional en Negocios Internacionales, con más de 10 años de experiencia en expansión comercial y fortalecimiento institucional. Experta en creación de empresas, modelos de negocio escalables, proyectos con Marco Lógico, apertura de mercados y liderazgo orientado a resultados y sostenibilidad.</p>
                     </div>
                 </div>
             </div>
