--- a/QUIENES SOMOS/index.html
+++ b/QUIENES SOMOS/index.html
@@ -121,7 +121,7 @@
                         <img src="WhatsApp Image 2026-01-15 at 2.42.07 PM.JPG" alt="Ana Lucía Torres" class="member-image">
                     </div>
                     <div class="member-info">
-                        <h3>Ana Lucía Torres</h3>
+                        <h3>Alfonso Canonigo Galvis</h3>
                         <span class="member-role">Directora de Estrategia</span>
                         <p class="member-desc">Consultor Internacional en Comercio Exterior con 26 años de experiencia acompañando procesos de internacionalización de empresas de bienes y servicios. Especialista en acceso a mercados, optimización de operaciones y fortalecimiento de capacidades exportadoras, con enfoque estratégico y orientado a resultados.
 
